<resources>
    <string name="app_name">PocketAlert</string>

    <!-- Multiple setting boves -->
    <string name="darkModeSwitchPreference">Dark mode</string>
    <string name="vibrationSwitchPreference">Vibration of the device</string>
    <string name="rotationList">Rotation of the device</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_reminder">SettingsReminder</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="defaultRotationMode">2</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="reminder">MedicineReminder</string>
    <string name="reminderId">Select the reminder device</string>


    <!-- Messages Preferences -->
    <string name="your_information">Edit personal information</string>

    <!--  Button strings  -->
    <string name="save">Save</string>
    <string name="connect">Connect</string>
    <string name="add_user">add user</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="how_to_connect_a_new_device">How To Connect a New Device</string>

    <!--  Toast string  -->
    <string name="empty_not_saved">Device not connected because id is empty.</string>
    <string name="data_not_saved">Data not saved</string>

    <!--  Image content description  -->
    <string name="person_icon">Person icon</string>
    <string name="address_icon">Address icon</string>
    <string name="phone_icon">Phone icon</string>
    <string name="email_icon">Email icon</string>
    <string name="bday_icon">Birthday icon</string>

    <!--  Instructions  -->
    <string name="connect_device_instructions_1">Connecting a fall detector to this app allows you to get notified when the wearer of the fall detector falls or presses the emergency button.</string>
    <string name="connect_device_instructions_2">To connect the device with the app you need to enter the fall detector\'s identification code into the text box below. You can obtain the ID code by ???holding down the false alarm button on the fall detector for 10 seconds. The speaker will then read out the ID code.???</string>
    <string name="connect_device_instructions_3">When this number has been written down, press \"Connect\". You will see a new device has been added.</string>
    <string name="connect_device_instructions_4">To add personal details of the wearer of the device, click on the newly added device and then on the pencil.</string>

    <!--  TextView string  -->
    <string name="connect_new_device">Connect New Device</string>
    <string name="identification_number">Identification number</string>
    <string name="enter_name">&lt;Enter a name&gt;</string>
    <string name="device_id_number">Device ID number: </string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="bday">Birthday</string>
    <string name="edit_details_title">Edit personal details</string>

    <!--  TextView string  History-->
    <string name="text_view_title">Previous messages</string>
    <string name="text_view_description">These are the previous messages:</string>
    <string name="text_view_id">ID of the fall:</string>
    <string name="text_view_date">Date</string>
    <string name="text_view_userID">UserID:</string>
    <string name="text_view_name">Name of the user:</string>
    <string name="text_view_locationx">Location X :</string>
    <string name="text_view_locationy">Location Y :</string>
    <string name="text_view_ongoing">Help still needed:</string>

    <!--  String for notifications-->
    <string name="user_notification_title">Someone needs your help!</string>
    <string name="user_notification_description">User has fallen!</string>
    <string name="user_notification_channel_name">Someone needs your help!</string>
    <string name="user_notification_channel_description">User has fallen!</string>
    <string name="intent_extra">extra_data_history</string>
    <string name="user_foreground_running_title">Pocket Detector</string>
    <string name="user_foreground_running_description">Pocket Detector is running on the background.</string>

    <!--  String for Medicine reminder-->
    <string name="hintEditTextMedicine">Edit the current date</string>
    <string name="saveTextHint">Extra information for notification</string>
    <string name="currentDateButton">Jump to current date</string>
    <string name="buttonTextView">No time is currently set</string>
    <string name="buttonTimePicker">Pick time</string>
    <string name="connect_a_device_to_set_reminders">Connect a device to set reminders</string>


    <!--  Other  -->
</resources>