<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:background="@color/mainBackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/text_view_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/text_view_id"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/text_view_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_title"
            android:text="@string/text_view_date" />

        <TextView
            android:id="@+id/text_view_UserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_date"
            android:text="@string/text_view_userID" />

        <TextView
            android:id="@+id/text_view_LocationX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_UserID"
            android:text="@string/text_view_locationx" />

        <TextView
            android:id="@+id/text_view_LocationY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_LocationX"
            android:text="@string/text_view_locationy" />

        <TextView
            android:id="@+id/text_view_onGoing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_LocationY"
            android:text="@string/text_view_ongoing" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>