<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".EditDetailsActivity">

    <TextView
        android:id="@+id/EditDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:text="@string/edit_details_title"
        android:textAlignment="center"
        android:textColor="@color/mainText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:text="@string/device_id_number"
        android:textColor="@color/mainText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditDetailsTitle" />

    <TextView
        android:id="@+id/deviceID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:textColor="@color/mainText"
        app:layout_constraintBottom_toTopOf="@+id/nameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/idText"
        app:layout_constraintTop_toBottomOf="@+id/EditDetailsTitle" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:shadowColor="@color/textAlt"
        android:textColor="@color/mainText"
        android:textColorHint="@color/textAlt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idText" />

    <EditText
        android:id="@+id/addressInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:ems="10"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:shadowColor="@color/textAlt"
        android:textColor="@color/mainText"
        android:textColorHint="@color/textAlt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:ems="10"
        android:hint="@string/phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:shadowColor="@color/textAlt"
        android:textColor="@color/mainText"
        android:textColorHint="@color/textAlt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressInput" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:shadowColor="@color/textAlt"
        android:textColor="@color/mainText"
        android:textColorHint="@color/textAlt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput" />

    <EditText
        android:id="@+id/bdayInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:ems="10"
        android:hint="@string/bday"
        android:importantForAutofill="no"
        android:inputType="date"
        android:shadowColor="@color/textAlt"
        android:textColor="@color/mainText"
        android:textColorHint="@color/textAlt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <Button
        android:id="@+id/cancelEditButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:backgroundTint="@color/red_button"
        android:onClick="onCancelDetails"
        android:text="@android:string/cancel"
        android:textColor="@color/mainText"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/saveEditButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bdayInput" />

    <Button
        android:id="@+id/saveEditButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:backgroundTint="@color/green_button"
        android:onClick="onSaveDetails"
        android:text="@string/save"
        android:textColor="@color/mainText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelEditButton"
        app:layout_constraintTop_toBottomOf="@+id/bdayInput" />

</androidx.constraintlayout.widget.ConstraintLayout>