<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/connectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/connect_new_device"
        android:textColor="@color/mainText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/big_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/connectInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_device_instructions"
                android:textColor="@color/mainText" />
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/connectInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="@dimen/big_padding"
        android:ems="10"
        android:hint="@string/identification_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:shadowColor="@color/textAlt"
        android:textColor="@color/mainText"
        android:textColorHint="@color/textAlt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/cancelConnectButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/red_button"
        android:onClick="onCancelConnect"
        android:text="@android:string/cancel"
        android:textColor="@color/mainText"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/connectButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectInput" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/green_button"
        android:onClick="onConnect"
        android:text="@string/connect"
        android:textColor="@color/mainText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelConnectButton"
        app:layout_constraintTop_toBottomOf="@+id/connectInput" />

</androidx.constraintlayout.widget.ConstraintLayout>